# sigmf-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fresh-deps.yml
src/: lib.rs  test.rs
tests/: compile_fail_test.rs  error_surface_test.rs  integration_open_file_test.rs  recording_writer_test.rs  spec_oracle_test.rs
tests/sigmf_test_files/: capture_geolocation.sigmf-meta  collection.sigmf-meta  extensions.sigmf-meta  geolocation_foreign_members.sigmf-meta  global_geolocation.sigmf-meta  minimal.sigmf-meta  realistic_recording.sigmf-meta  sample.sigmf-meta  scoped_extension_keys.sigmf-meta
tests/spec/: README.md
tests/ui/: sample_is_sealed.rs  sample_is_sealed.stderr
