[package]
name = "sigmf"
version = "0.1.1"
authors = ["Alex Khamutov <alex.khamutov@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust library for interacting with SigMF recordings,"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Pinned at 7.x deliberately, and on its way out: nom is used for exactly one
# thing -- parsing the <=8-character core:datatype string -- which becomes a
# hand-rolled FromStr with no dependency. Porting to nom 8 (a breaking API
# change) would be rewriting code that is about to be deleted.
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
# Validates our fixtures and our output against the SigMF specification's own
# machine-readable definition, vendored at tests/spec/sigmf-schema.json.
#
# default-features = false drops resolve-http, which would let the validator
# fetch a remote $ref over the network mid-test. The vendored schema has no
# $refs at all, so a resolver is dead weight -- and disabling it means a future
# schema that grows one fails loudly here instead of silently reaching the
# network and making CI depend on sigmf/SigMF being up.
jsonschema = { version = "0.48.0", default-features = false }
