[package]
name = "sigmf"
version = "0.1.1"
authors = ["Alex Khamutov <alex.khamutov@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Read and write SigMF recordings: recorded radio signals, and metadata that describes them"
repository = "https://github.com/khamutov/sigmf-rs"
readme = "README.md"
keywords = ["sigmf", "sdr", "radio", "iq", "dsp"]
categories = ["encoding", "parser-implementations", "science"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Derives the error types.
#
# 2.x for the mirror image of sha2's reasoning below: here the current release is
# also the one the ecosystem has already moved to, so it is the version that adds
# nothing to a consumer's tree. A proc-macro dependency compiles at build time and
# links nothing into the result, which is what makes it affordable for a library
# to take at all -- it expands to the `Display` and `Error` impls we would
# otherwise write by hand, and the hand-written `source()` is precisely what this
# crate had wrong.
thiserror = "2.0.17"

# The sample types the write path is generic over. `core:datatype`'s `c` prefix
# means an interleaved I/Q pair, and Complex<T> is what the ecosystem already
# calls that -- modelling it with our own type would force a conversion on every
# caller for no gain.
num-complex = { version = "0.4.6", default-features = false }

# core:sha512, and nothing else.
#
# 0.10 rather than 0.11 deliberately. The cost of a hash crate to a library is
# not its own weight, it is a duplicate of it in every consumer's tree: 0.10 is
# what the ecosystem is on, so taking 0.11 would put a second sha2 and a second
# digest into the tree of everyone who already has one, to buy an API this crate
# calls exactly once. Revisit when consumers have moved, not before.
sha2 = { version = "0.10.9", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"

# Gives the write-path tests a directory that cleans itself up, so they cannot
# collide with one another or leave debris behind on failure.
tempfile = "3.23.0"

# Asserts that code which must *not* compile does not. The seal on `Sample` is a
# compile-time property, so a compile-time test is the only kind that can observe
# it -- see tests/ui/.
trybuild = "1.0.118"
# Validates our fixtures and our output against the SigMF specification's own
# machine-readable definition, vendored at tests/spec/sigmf-schema.json.
#
# default-features = false drops resolve-http, which would let the validator
# fetch a remote $ref over the network mid-test. The vendored schema has no
# $refs at all, so a resolver is dead weight -- and disabling it means a future
# schema that grows one fails loudly here instead of silently reaching the
# network and making CI depend on sigmf/SigMF being up.
jsonschema = { version = "0.48.0", default-features = false }
